--- a/localisation/KR_Shanxi_l_simp_chinese.yml
+++ b/localisation/KR_Shanxi_l_simp_chinese.yml
@@ -194,12 +194,12 @@
  SHX_national_populist_party:0 "洗心社"
  SHX_national_populist_party_long:0 "洗心社(Xixinshe)\n§g赵戴文是阎锡山尊重的为数不多的几个在世人物之一，他是阎锡山的老师，对阎锡山的政治哲学有深刻的影响。赵戴文是同盟会成员之一，饱读诗书，潜心佛学，他很可能一手参与了阎锡山的新儒家思想的融合与策划。洗心社是阎锡山推广爱国儒家思想的产物，尽管为了推广洗心社花了很大的力气，但真正愿意相信新儒家的“信徒”仍寥寥无几，而且当政府不再注意与授权集会后，参加集会的人数骤减。但社会上仍有狂热分子自行参加集会，这种反动运动提醒着阎锡山进行自上而下的改革。这些新儒家结社是阎锡山减少国民军民间影响的主要手段，尽管他们暂时不成风气，但也已在山西无处不在了。§!"
 
- SHX_yan_social_democrat_party:0 "农民协会"
- SHX_yan_social_democrat_party_long:0 "农协(Farmer's Association)\n§g国民党在山西只有微弱的支持度，且集中在农业派周围，鉴于山西农民的悲惨处境，这不足为奇。在“长安县农民协会”的合法身份掩护之下，魏野畴长期以来一直是国民党在陕西的实际领导人。魏野畴是中学教师，指导过许多陕西的社会主义活动家，还应邀参加过1926年国民党全国代表大会，这一荣誉至今仍然令他很自豪。虽然在很大程度上，魏野畴的农会和民兵遭到了镇压，但农会也在一定程度上缓解了乡绅对农民的剥削。魏野畴的农会派与国民党内宋庆龄一派有着松散的联系，他希望他的同志们所做出的牺牲都有意义。§!\n"
+ SHX_yan_social_democrat_party:0 "洗心社"
+ SHX_yan_social_democrat_party_long:0 "洗心社(Xixinshe)\n§g赵戴文是阎锡山尊重的为数不多的几个在世人物之一，他是阎锡山的老师，对阎锡山的政治哲学有深刻的影响。赵戴文是同盟会成员之一，饱读诗书，潜心佛学，他很可能一手参与了阎锡山的新儒家思想的融合与策划。洗心社是阎锡山推广爱国儒家思想的产物。§!"
  SHX_yan_authoritarian_democrat_party:0 "陕军"
- SHX_yan_authoritarian_democrat_party_long:0 "杨虎城派\n§g冯玉祥彻底失败，被逐出了我省，国民军不可逆转地分崩离析。军中的社会主义分子走上了自己的道路，一些冯玉祥的亲信选择跟随他一起流亡，其他人则加入阎锡山的政府，为了一份工作用尽手段，尽管如此，仍有少数人围绕在杨虎城周围，选择继续抗争。杨虎城生于陕西，曾在孙岳的国民军中担任下级军官，在国民军撤退到他的家乡后，他声名大噪，带领这些人藏匿于陕西的山区之中，名义上服从阎锡山节制，称为陕军，杨虎城希望以这种方式保有军事上自治的可能性，同时这也使他饱受非议，尽管杨虎城辩称这是自保所必需的，许多人仍将这种名义上的服从视为对国民军的深刻背叛。无论如何，对于阎锡山来说，这些人在未来所能造成的威胁微乎其微。§!\n"
+ SHX_yan_authoritarian_democrat_party_long:0 "杨虎城派\n§g冯玉祥彻底失败，被逐出了我省，国民军不可逆转地分崩离析。军中的社会主义分子走上了自己的道路，一些冯玉祥的亲信选择跟随他一起流亡，其他人则加入阎锡山的政府，为了一份工作用尽手段，尽管如此，仍有少数人围绕在杨虎城周围，选择继续抗争。杨虎城生于陕西，曾在孙岳的国民军中担任下级军官，在国民军撤退到他的家乡后，他声名大噪，带领这些人藏匿于陕西的山区之中，名义上服从阎锡山节制，称为陕军，杨虎城希望以这种方式保有军事上自治的可能性，同时这也使他饱受非议，尽管杨虎城辩称这是自保所必需的，许多人仍将这种名义上的服从视为对国民军的深刻背叛。无论如何，对于阎锡山来说，这些人在未来所能造成的威胁微乎其微。§!"
  SHX_feng_paternal_autocrat_party:0 "晋系残党"
- SHX_feng_paternal_autocrat_party_long:0 "新晋系\n§g在阎锡山政府因国民军进击而崩溃的同时，他的追随者争先恐后地在他小王国中开辟自己的立足之地。洗心社狂热者集结了在阎锡山侄子梁化之的旗下，省政人员和乡绅基本上都和王骧一同流亡，而山西省军则被阎锡山的亲信将领瓜分。商震与大批部下分道扬镳并加入了国民军新政府，此举被许多旧省政人员斥为叛变。与此同时，傅作义和徐永昌在旧晋系忠诚派中建立了自己的势力，并山西省的简称命名，称为“新晋系”。尽管人们都认为新晋系会为新政府带来麻烦，但他们应该掀不起什么风雨。§!\n"
+ SHX_feng_paternal_autocrat_party_long:0 "新晋系\n§g在阎锡山政府因国民军进击而崩溃的同时，他的追随者争先恐后地在他小王国中开辟自己的立足之地。洗心社狂热者集结了在阎锡山侄子梁化之的旗下，省政人员和乡绅基本上都和王骧一同流亡，而山西省军则被阎锡山的亲信将领瓜分。商震与大批部下分道扬镳并加入了国民军新政府，此举被许多旧省政人员斥为叛变。与此同时，傅作义和徐永昌在旧晋系忠诚派中建立了自己的势力，并山西省的简称命名，称为“新晋系”。尽管人们都认为新晋系会为新政府带来麻烦，但他们应该掀不起什么风雨。§!"
 
  SHX_zhao_dai_wen: "赵戴文"
  SHX_yan_xishan: "阎锡山"
@@ -435,7 +435,9 @@
  SHX_expand_coal_sale:0 "扩大煤矿出口"
  SHX_expand_coal_sale_desc:0 "煤炭是经济的命脉所在。近年来，太行山脉的煤矿开采力度逐渐加大。中国经济正日益复苏，工业生产对煤炭的需求量也水涨船高。要想重夺全国最大煤炭产区的地位，我们就必须满足这一需求量，并击败山东的竞争对手们。"
  SHX_crackdown_foreign_agitators:0 "镇压外来煽动者"
- SHX_crackdown_foreign_agitators_desc:0 "我们必须定期清理门户以保护山西不受省外阴谋破坏。虽然大多数的省府人员都在收各种形式的贿，但一系列针对问题赂款来源的突击搜查可以发出有关忠诚的清晰信号！"
+ SHX_crackdown_foreign_agitators_desc:0 "我们必须定期清理门户以保护山西不受省外阴谋破坏。虽然大多数的省府人员都在收各种形式的贿赂，但一系列针对问题赃款来源的突击搜查可以将这些首鼠两端的家伙清理出去。"
+ SHX_shen_cha_foreign_agitators:0 "媒体审查"
+ SHX_shen_cha_foreign_agitators_desc:0 "严格的新闻审查阻止了民众接触到任何异议，并确保了他们只能了解我们政权的想法。"
 
  SHX_QIE_shanxi_diplomacy_decisions_category:0 "我们在山西的利益"
  SHX_QIE_shanxi_diplomacy_decisions_category_desc:0 "晋系军阀，它的崇山峻岭和两支军队，一直都是我们的麻烦所在。我们有不少手段令其保持顺从，并且§G随着形势发展，更多手段将摆上台面§!。维持我们的影响力对保卫西北十分重要。\n\n\n\n晋系能否反抗我们，关键在于其§Y战争支持度§!。要想保持国家统一，我们就万不可让他们的§Y战争支持度§!增长得太高。晋系的§Y战争支持度§!目前为[?SHX.has_war_support|%R0]\n\n除此之外，还要警惕持革命思想、同我们对立的国民军不断增长的影响力。§!§C当前，国民军[SHX.GMJ_coup_strength]。§!§!\n\n鉴于过去的敌意，晋系军阀虽然名义上服从我们，实际情况却令人难以放心。然而，八省联合崩溃后的局势使我们很难找到机会，去改变与晋系及其领导层之间的关系。在这场互动中，太原和北京将分别操纵局面，使其对己方更加有利。保证我方§G影响力处于高位§!，对方§Y战争支持度处于低位§!，同时将§R国民军§!排除在权力中心之外，如此方能让晋系同我们的利益保持一致。\n\n[Root.GetNameDefCap][Root.GetFlag]拥有[?SHX.SHX_QIE_influence_variable|0]%§H经济影响力§!"
@@ -515,6 +517,7 @@
  SHX_QIE_spend_medium_tooltip: "§c北京的影响力§!§Y降低§!§G10%§!"
  SHX_QIE_spend_large_tooltip: "§c北京的影响力§!§Y降低§!§G15%§!"
  SHX_QIE_spend_giga_tooltip: "§c北京的影响力§!§Y降低§!§G30%§!"
+ SHX_QIE_biger_tooltip: "这将帮助我们更好的抵抗§c北京的影响力§!"
  SHX_QIE_eco_invest_choice_small_texticon: "[QIE.GetFlag] 5%或者£pol_power [?SHX_pay_with_pp_small_variable]"
  SHX_QIE_eco_invest_choice_small_texticon_blocked: "[QIE.GetFlag] §R5%§!或者£pol_power §R[?SHX_pay_with_pp_small_variable]§!"
  SHX_QIE_eco_invest_choice_medium_texticon: "[QIE.GetFlag] 10%或者£pol_power [?SHX_pay_with_pp_medium_variable]"
@@ -656,6 +659,28 @@
  shx.earlygame.15.feng.d:0 "第四次直奉战争于1928年收场，留下一地血腥，山西省军和国民军新近组建起一支联军，自此，吴佩孚将其专制统治延伸至山西的野望遭到了遏制。而联军同他们所保卫的领土和财富相比，实在臃肿得过分，不过依靠省内山河之险，联军最终还是迫使中央军铩羽而归。\n\n尽管曾共拒外敌，但阎锡山和冯玉祥都对彼此心里的长远盘算戒心满满，因此双方都没有认真打算过整合两家部队。大多数时候，国民军盘踞陕北，通过小作坊土造、从西安走私或盗窃，以及翻找二十年代旧军火库存货等渠道维持武器补充；晋军则经略山西老巢，一心守着太原兵工厂制枪造炮。\n\n如今晋军在我们阵前溃不成军，我们终于有机会整编两军。对待晋军我们有两种处理方法：一是吸纳愿意加入我们事业的士兵，并向他们灌输我们的意识形态；二是只撤换晋军高层，保留部队建制及基层军官职位，并选一位新督军节制晋军。"
  shx.earlygame.15.feng.a:0 "中国军人，前进！"
  shx.earlygame.15.feng.b:0 "最好不要自找麻烦。"
+ shx.409.t:0 "大清行省"
+ shx.409.d:0 "由于对宣统维新的支持，山西省长阎锡山开始自称“山陕总督”，并改挂大清的省旗以示对北京新政府的支持。"
+ shx.409.a:0 "很好！"
+
+ shx.yan.1.t:0 "官僚体系的最新状况"
+ shx.yan.1.d:0 "建立一个中央集权的官僚系统是晋系未来最看重的目标之一，为此我们实施了许多方案，在最近终于起了点成效。山西只有一百多个县，每个县都需要一个县长，而县长又需要一个行政人员来协助管理。大多数县又被分成了三到六个区，每个区由一名副县长管辖。这些县长在太原培训中心和行政学院学习，并在新成立的乡镇局下任职。\n\n坏消息是，腐败横行，过去很长一段时间行政部门为了避免开革太多人而拒绝采用业绩考察机制。许多官员甚至大字不识几个，尸位素餐，还经常侵吞公产、勒索百姓。我们对此实施的第一批举错之一是废除包税制，并且把那些尸位素餐和贪污受贿的家伙扫地出门。虽然还有不少事要做，但千里之行，始于足下。"
+ shx.yan.1.a:0 "需要不断整顿官僚体系"
+ shx.yan.2.t:0 "中的哲学"
+ shx.yan.2.d:0 "为了复兴新儒家，阎锡山的执政哲学大多聚焦于“中的哲学”，即对“中庸之道”的诠释上，这正是儒家对于和谐与克制的诠释。世界大战对阎锡山产生了巨大的影响，尽管德国最终的胜利巩固了他的专制主义信念，但这些参战国受到的彻底破坏也挑战着阎锡山曾秉持的完全的唯物主义思想。他以此与很多保守的中国评论员一起宣称，世界大战“推其肇祸之源，实由不遵圣人之道。”\n\n尽管现在阎锡山的道德钟摆又倾向了唯物主义为主的大规模工业计划，不过他仍然相信，他的人民仍需要通过道德复兴来修养精神，培育实现现代化进程所必须的美德。因此，阎锡山强调晚清理学以及陆九渊、王阳明等哲人的思想。为了实现存天理，灭恶念，阎锡山对他的人民提出了“致良知”的要求。"
+ shx.yan.2.a:0 "修身则道立！"
+ shx.yan.3.t:0 "山西的儒家思想"
+ shx.yan.3.d:0 "儒家思想是中国社会和政治哲学的一大基础，它是孔子哲学、思想与治国理念的集合。有些人认为它是一种哲学，有些人认为它是一种处世方法，也有些人认为它是一种宗教，而新儒家思想则是阎锡山那综摄意识形态的基石。举个例子，冯玉祥尽管皈依了基督教，但他仍和许多同胞们一样，以儒家的眼光看待世界，对百姓十分关心。对他来说，基督教和儒家的社会原则没有过多区别，只是基督教的实践更加有效。而且国民军虽然曾经将道观和寺庙洗劫一空，却对夫子庙不曾侵扰。\n\n阎锡山和赵戴文认为，儒家提倡和为贵与修身养性能解决军阀混战带来的社会问题。阎锡山在担任督理期间就大力提携洗心社，试图以此复兴儒家思想。\n\n虽然阎锡山口口声声说着要复兴儒家，但他的一些所作所为实际上已经背弃了他自己的初衷。他重视国家和农村的发展，忽视了对传统家庭地位的维护，让某些人极为恼火，十年计划的推进加速了传统家庭关系的破裂，父亲作为家长的权力远不如以往，提倡年轻人自由恋爱也让包办婚姻大为减少。阎督理甚至还提议过将各家的祖坟迁到村里的公墓，这样就能利用空出来的土地，这些都是对传统的冒犯。\n\n阎锡山还公开表示要与天斗，要征服自然，这和儒家的和谐思想完全冲突，更有他的部分追随者甚至把孔子说成是科学和经济进步的推动者。也许最能说明阎锡山离经叛道的是，山西政府取消了对“道德品质”的考核，认为只有人数众多的技官才能推动国家的进步，而不是一堆只会念着之乎者也的老皮休。"
+ shx.yan.3.a:0 "家齐而后国治。"
+ shx.yan.4.t:0 "山西的佛教教诲"
+ shx.yan.4.d:0 "佛教是山西的另一大主要宗教，遵循释迦牟尼的训诫，佛教徒们根据教义追求克服苦难。中国的佛教主要为大乘佛教的一支，也被称为汉传佛教。在这种社会氛围下，阎派政府内部最主要的佛教信徒是前省长赵戴文，他是阎锡山的重要副手，同时也是他的导师。尽管阎锡山在日本的经历使他开始对佛教冷眼相待，他认为佛教自满且迷信，在1911年上台后，他试图拆毁佛寺，摧毁佛像以支持洗心会。但民间的反响十分强烈，阎锡山不得不收手，证实了佛教在中国社会中的巨大影响。\n\n冯玉祥和国民军也有类似的反释阶段。冯玉祥的手下洗劫过寺庙，还把寺庙改成了学校用——对国民军来说，佛教往往代表着令人失望的停滞不前的“古老”中华文化。对冯将军来说，佛教的作用主要就是让手下悍不畏死。而这种反释关系一直持续到国民军进驻陕西，他们在僧人集团中近无支持者为止。\n\n也许是因为赵戴文的影响，也许是因为对稳定的渴望，阎锡山采取了不同的手段。他试图加强对佛教等级体制的控制，在每个县建立由忠诚的和尚领导的佛教协会，他还任命了一名忠诚的手下担任崇善寺的住持，洗心会每周的活动也为此引入了佛事。目前还不清楚这些手段是否争取到了佛教徒的支持，但没有这些人的支持，对山西的统治就难以维持。"
+ shx.yan.4.a:0 "妙语是理解的精华。"
+ shx.yan.5.t:0 "人民须知！"
+ shx.yan.5.d:0 "拥有数十年管理本省经验的阎锡山是位精明且德高望重的领袖，而他向他的属民分享智慧是件再也合理不过的事。这些年来，省府已经向全山西的教师、官吏和学生派发了上百万本免费手册。这些手册有着各种主题，如《家庭须知》、《村长副须知》、《商人通识》，当然还有《人民须知》，每本书都有着专为省内各人民而设的详细指引。\n\n阎锡山同时也有资助与其政府有所联系各类报章，包括日报《村话》。他的言论集、口号和语录无时无刻都在通过海报、巡游和报章在省内传播并受到不同程度的欢迎。在过去的几个星期里，阎锡山政府又增加了在公关方面的投入，阎锡山的宣传体制已经万事俱备，现在只剩下一个问题了..."
+ shx.yan.5.a:0 "督理这说的啥啊？"
+ shx.yan.6.t:0 "媒体审查"
+ shx.yan.6.d:0 "目前在省境内和在那些工会、学联、农社内部运作的秘密组织正在分享他们的社会主义文学和理论。这些东西无非是对工团主义、社会主义、共产主义和其他腐败意识形态的宣传，撕裂社会，造成混乱，对我们社会百害而无一利。我们需要建立新闻审查制度来阻止我们社会的这一议程，并拯救我们无辜民众的思想。随着一切的马克思主义、工团主义报纸、广播、电影和文学作品都被审查、销毁或以其他方式从公众的视野中消失，社会主义的幽灵将不再笼罩我们的山乡。"
+ shx.yan.6.a:0 "言论自由，但社会主义者没有"
 
  shx.edu.0.t:0 "教育改革接近完成"
  shx.edu.0.d.yan:0 "尽管存在种种困难和反对声音，山西最终仍然成功完成了一切必要的技术突破，奠定了其十年计划的基础。他们的山西大学，山西国民师范学院以及各种技术学校（之前已经是腐败至极，烂到根子上了）现在也经过努力摆脱了从前的腐朽，一套崭新的，更强大的学校系统展现在了人们面前。无能又摆烂的教授被取代或是被改造，随之而来的是国外学者，国内技工和完美的学术氛围。学生则被一个棒槌一个甜枣地规训了起来。大学校园，虽然还是一个学生休闲的地方，但黑恶恶性事件数量已经显著减少。缺乏使用而长期关闭的校园图书馆已经重新开放，新一代学生们正在朝气蓬勃地为新山西与新中国之崛起而读书。教授和学者们的研究工作得到资助，他们很快就可以与北京乃至世界的科学家并肩而立。\n\n当然，山西仍然存在许多问题，主要是高等教育内部仍然存在着阶层间的不平等。虽然来自较低阶层的学生能获得奖学金，但绝大部分学生仍然来自较上层的阶级。但话说回来，没有人能否认山西相较于世纪初的境况来看已经好了太多，好日子还在后头呢！"
@@ -951,12 +976,11 @@
  shx.33.d:0 "兰州的地方驻军率领当地一切可用之兵抵抗了我们对甘肃省的入侵，同时马家军方面也拍来一封电报，要求我们立即撤出甘肃，否则将被视为战争行为。看上去我们和平入城的希望已经彻底破灭，就算马氏已经处于如此处境，他们仍准备同我们决一死战以保全领土。"
  shx.33.a:0 "那就让开始战斗吧！"
  shx.33.b:0 "退一步吧，我们负担不起这次战争。"
- shx.409.t:0 "大清行省"
- shx.409.d:0 "由于对宣统维新的支持，山西省长阎锡山开始自称“山陕总督”，并改挂大清的省旗以示对北京新政府的支持。"
- shx.409.a:0 "很好！"
 
  SHX_neutrality:0 "山西中立政策"
  SHX_neutrality_desc:0 "山西群山环绕，周围的邻居都与其关系紧张，因此其领导层在政治和外交上深陷孤立主义。讽刺的是，在直系的惨胜下，正是山西高层这种长期闭关自守的心态给了他们一线生机。但是，这种地方主义也让人民对任何向外的干涉都不感兴趣，如果阎冯的志向不限于太原，就需要用一个共同的愿景来团结人民。"
+ SHX_strict_neutrality1:0 "淡忘中立"
+ SHX_strict_neutrality1_desc:0 "尽管群山环绕，且固步自封的习气根深蒂固，但山西领导层已经开始走出这种两耳不闻窗外事的孤立状态。随着他们再一次放眼域外，显然[SHX.GetRulingParty]仍然梦想着统一中国，并将他们的愿景远播。人们亦是如此，从士绅、知识分子到卑微的老百姓似乎都怀着这种日益炽烈的热望。前路荆棘密布，在地区冲突中山西也并不被看好，但山西也许不会永远保持孤立。"
  SHX_dual_armies:0 "一省两军"
  SHX_dual_armies_desc:0 "在北伐战争及华北混战的末期，阎锡山和冯玉祥都试图夺取该地区的控制权，但均以失败告终。在吴佩孚在德国人的援助下确立了对华北的支配，而张作霖在日本人的支持下于东北开疆拓土之后，阎冯二人被迫接受了这盘残局——他们都流落到了一个崎岖且闭塞的地方。虽然双方兵力大致相等，但阎锡山在军队纪律性的建设上不如冯玉祥和他的国民军成功。然而阎锡山控制着强大的太原兵工厂，为他的军队提供了相对现代化的火炮加强。双方都在努力保护山西的自治权、使其不受中央政府侵犯上达成了一致，但他们都拒绝任何有助于整合双方军队的合作行为。这两支军队的开销也都不低——维持军队的花费已使得省库几近破产，这令双方都对此感到不安。这种不稳定的休战不禁让许多人怀疑这样的体制到底还能持续多久。"
  SHX_dual_armies2:0 "一省两军"
@@ -983,6 +1007,8 @@
  SHX_underdeveloped_mountain_economy_yan1_desc:0 "山西的经济繁荣令人叹为观止，不仅各种商品的产能突飞猛进，品质也水涨船高。贪污受贿和任人唯亲的风气有所收敛，山西的各种商会钱庄与外界投资者的合作也日益开放。此前的一切质疑与忧虑在来往银钱的冲洗中荡然无存，山西的资本家们也正为长远的未来而不是短浅的快钱绞尽脑汁。高楼大厦拔地而起，省内省外的人都拥向山西寻找工作。毫无疑问，山西国家资本主义模式的成功在很大程度上可以归功于晋系政府与日益壮大的商人阶层还有省外资本家间的合作，但也有人担心经济的无节制增长。毕竟当初说这个计划只是解放中国前的临时措施，谁也不知道山西会不会在持续的繁荣中武德渐失。"
  SHX_underdeveloped_mountain_economy_yan2:0 "山西经济重生"
  SHX_underdeveloped_mountain_economy_yan2_desc:0 "山西的经济奇迹可能会被记录在史书中，供全中国乃至全世界效仿。山西的经济改革在保证资本、政府与劳工合作的同时还适当地混合了宽松的管制措施，从而取得了辉煌的成功。自开设票号以来，山西的豪商巨贾门终于享受上了富足的生活，太原的工业水平第一次能够支持山西与外界竞争。当然也不是所有的行业都能活得下去，在自由市场和当局意愿的双重影响下总有一些行业得落幕。而像羊毛、火柴、工业酒精、纸张和砖头则是山西当前的主要出口产品。同样的，大众对生活水准、山西高速建设的住房质量以及山西金融阶层的新商业文化仍有担忧。山西的经济也发展到了足以支持他竞争华北主导者的水平，前提是，山西自己要抓住机会。"
+ SHX_underdeveloped_mountain_economy_yan3:0 "法团经济改革"
+ SHX_underdeveloped_mountain_economy_yan3_desc:0 "山西的经济奇迹可能会被记录在史书中，供全中国乃至全世界效仿。山西的经济改革在保证资本、政府与劳工合作的同时还适当地混合了宽松的管制措施，从而取得了辉煌的成功。自开设票号以来，山西的豪商巨贾门终于享受上了富足的生活，太原的工业水平第一次能够支持山西与外界竞争。当然也不是所有的行业都能活得下去，在自由市场和当局意愿的双重影响下总有一些行业得落幕。而像羊毛、火柴、工业酒精、纸张和砖头则是山西当前的主要出口产品。同样的，大众对生活水准、山西高速建设的住房质量以及山西金融阶层的新商业文化仍有担忧。山西的经济也发展到了足以支持他竞争华北主导者的水平，前提是，山西自己要抓住机会。\n\n不过这一切的美梦都将结束了，曾经许诺的自由将被收紧，宽松的管制也将化为泡影。随着省政府在政治上的改革接近完成，经济上的改革也将开始。那些富商们要么赶快和政府站到一起，要么..."
  SHX_qie_influence_idea0:0 "在北京的阴影下"
  SHX_qie_influence_idea0_desc:0 "§Y[QIE.GetName]对我们的经济有可见的控制！§!"
  SHX_qie_influence_idea1:0 "在北京的阴影下"
@@ -1092,6 +1118,17 @@
  SHX_standardised_railway_gauges:0 "标准轨距"
  SHX_narrow_railway_gauges:0 "窄轨铁路"
  SHX_yan_xishan_thought:0 "阎锡山思想"
+ SHX_consolidate_bureaucracy:0 "整肃官僚群体"
+ SHX_consolidate_bureaucracy_desc:0 "山西的官僚集团水平等级、身份背景及其繁杂，乡绅们想要摆脱政府的控制，直系的走狗想要让山西沦为直系的玩物，以至于还有来自国民党的奸细等等...也许在政治动荡能够让这些人又所作为但是现在当政治稳定之后，阎锡山发起了一场庞大的官僚改革运动，所有的县长都需要来到太原接受政治教育，所有被核查到贪污腐败的官员都将被严惩。更关键的阎锡山家长式独裁统治的权力将得到极大的扩张。"
+ SHX_she_hui_fu_li:0 "社会福利"
+ SHX_she_hui_fu_li_desc:0 "许多深陷于当代政治的人可能常常忘记，为受压迫者提供帮助并非社会主义的理念，儒家理念中早已提及“故人不独亲其亲，不独子其子，使老有所终，壮有所用，幼有所长，矜、寡、孤、独、废疾者皆有所养。”这就是儒家的理想社会，这也是阎锡山督理理想中的社会模样。"
+ SHX_she_hui_fu_liB:0 "社会福利"
+ SHX_she_hui_fu_liB_desc:0 "许多深陷于当代政治的人可能常常忘记，为受压迫者提供帮助并非社会主义的理念，儒家理念中早已提及“故人不独亲其亲，不独子其子，使老有所终，壮有所用，幼有所长，矜、寡、孤、独、废疾者皆有所养。”这就是儒家的理想社会，这也是阎锡山督理理想中的社会模样。"
+ SHX_a_higher_purpose_idea:0 "重整本地政治"
+ SHX_a_higher_purpose_idea_desc:0 "山西正处于一个十字路口，晋系统治下的全省人民的集体意志必须很快决定他们将追求什么样的未来。阎锡山代表了一种专制的、受儒家影响的领导风格——这是几十年来以稳定为中心的统治的延续。这位老督理思想保守，但愿意接受现代性，他承诺要恢复中国被窃取的平衡与和谐。在他的带领下，山西一定会一起前进！"
+ SHX_confucian_order:0 "儒家秩序"
+ SHX_confucian_order_desc:0 "儒家社会正在西北地区出现。晋系军阀治下的人民团结在其模范督理身后，努力改造山西。这里乡绅肆意妄为，而卑微的农民只能自认其命。这里经济和科技长足发展，同时保留了中国传统价值观。国民军的革命民粹式的花言巧语已被噤声，人民显然已经作出了选择：我们将走向繁荣！"
+ SHX_mass_censorship:0 "新闻审查"
 
  SHX_model_province_taiyuan:0 "模范省的心脏"
  SHX_model_province_taiyuan_desc:0 "太原是阎锡山政府的掌上明珠，长期受到省政府的高度偏爱。在我们的英明统治下，以进步改革为傲的太原已成为我省打造模范省形象以供他人膜拜的中心。"
