铁骨铮铮冯玉祥

--- a/localisation/KR_Shanxi_l_simp_chinese.yml
+++ b/localisation/KR_Shanxi_l_simp_chinese.yml
@@ -174,11 +174,11 @@
  SHX_NCPC_KMT_integrated_governorate_ADJ: "西北政务委员会"
 
  SHX_totalist_party:0 "山西牺牲救国同盟会"
- SHX_totalist_party_long:0 "山西牺牲救国同盟会(Shanxi Sacrifice for the Nation Alliance)\n§g自1925年北伐战争开始后，山西省内的左翼开始活跃起来与远在南方的国民党和亲近左翼的冯玉祥和他的国民军一起联合起来抵抗北洋政府。随着北伐战争的失利，山西省境内的国民党开始分裂。以俞心清为首的支持宋庆龄的一派获得了民心并和省内的工团党支部一起退居太行山中的昔阳县大寨村，而胡景通为首的拥汪派则流亡海外。1932年上海起义后潜伏大寨村的三股山西左翼势力分别是俞心清领导的国民党-临委会、彭真领导的工团党山西支部和贾进财及陈永贵等本地农民联合创建的农业社会主义组织社会革命联盟合并为了一个全新的左翼组织即山西牺牲救国同盟会，牺盟会成立后，开始在全山西省内宣传左翼思想、组织民团并在学生中取得了一定的影响力。在牺盟会的领导下，山西的社会主义者正在逐步壮大之中。§!"
+ SHX_totalist_party_long:0 "山西牺牲救国同盟会(Shanxi Sacrifice for the Nation Alliance)\n§g自1925年北伐战争开始后，山西省内的左翼开始活跃起来与远在南方的国民党和亲近左翼的冯玉祥和他的国民军一起联合起来抵抗北洋政府。随着北伐战争的失利，山西省境内的国民党开始分裂。以余心清为首的支持宋庆龄的一派获得了民心并和省内的工团党支部一起退居太行山中的昔阳县大寨村，而胡景通为首的拥汪派则流亡海外。1932年上海起义后潜伏大寨村的三股山西左翼势力分别是余心清领导的国民党-临委会、彭真领导的工团党山西支部和贾进财及陈永贵等本地农民联合创建的农业社会主义组织社会革命联盟合并为了一个全新的左翼组织即山西牺牲救国同盟会，牺盟会成立后，开始在全山西省内宣传左翼思想、组织民团并在学生中取得了一定的影响力。在牺盟会的领导下，山西的社会主义者正在逐步壮大之中。§!"
  SHX_syndicalist_party:0 "山西牺牲救国同盟会"
- SHX_syndicalist_party_long:0 "山西牺牲救国同盟会(Shanxi Sacrifice for the Nation Alliance)\n§g自1925年北伐战争开始后，山西省内的左翼开始活跃起来与远在南方的国民党和亲近左翼的冯玉祥和他的国民军一起联合起来抵抗北洋政府。随着北伐战争的失利，山西省境内的国民党开始分裂。以俞心清为首的支持宋庆龄的一派获得了民心并和省内的工团党支部一起退居太行山中的昔阳县大寨村，而胡景通为首的拥汪派则流亡海外。1932年上海起义后潜伏大寨村的三股山西左翼势力分别是俞心清领导的国民党-临委会、彭真领导的工团党山西支部和贾进财及陈永贵等本地农民联合创建的农业社会主义组织社会革命联盟合并为了一个全新的左翼组织即山西牺牲救国同盟会，牺盟会成立后，开始在全山西省内宣传左翼思想、组织民团并在学生中取得了一定的影响力。在牺盟会的领导下，山西的社会主义者正在逐步壮大之中。§!"
+ SHX_syndicalist_party_long:0 "山西牺牲救国同盟会(Shanxi Sacrifice for the Nation Alliance)\n§g自1925年北伐战争开始后，山西省内的左翼开始活跃起来与远在南方的国民党和亲近左翼的冯玉祥和他的国民军一起联合起来抵抗北洋政府。随着北伐战争的失利，山西省境内的国民党开始分裂。以余心清为首的支持宋庆龄的一派获得了民心并和省内的工团党支部一起退居太行山中的昔阳县大寨村，而胡景通为首的拥汪派则流亡海外。1932年上海起义后潜伏大寨村的三股山西左翼势力分别是余心清领导的国民党-临委会、彭真领导的工团党山西支部和贾进财及陈永贵等本地农民联合创建的农业社会主义组织社会革命联盟合并为了一个全新的左翼组织即山西牺牲救国同盟会，牺盟会成立后，开始在全山西省内宣传左翼思想、组织民团并在学生中取得了一定的影响力。在牺盟会的领导下，山西的社会主义者正在逐步壮大之中。§!"
  SHX_radical_socialist_party:0 "山西牺牲救国同盟会"
- SHX_radical_socialist_party_long:0 "山西牺牲救国同盟会(Shanxi Sacrifice for the Nation Alliance)\n§g自1925年北伐战争开始后，山西省内的左翼开始活跃起来与远在南方的国民党和亲近左翼的冯玉祥和他的国民军一起联合起来抵抗北洋政府。随着北伐战争的失利，山西省境内的国民党开始分裂。以俞心清为首的支持宋庆龄的一派获得了民心并和省内的工团党支部一起退居太行山中的昔阳县大寨村，而胡景通为首的拥汪派则流亡海外。1932年上海起义后潜伏大寨村的三股山西左翼势力分别是俞心清领导的国民党-临委会、彭真领导的工团党山西支部和贾进财及陈永贵等本地农民联合创建的农业社会主义组织社会革命联盟合并为了一个全新的左翼组织即山西牺牲救国同盟会，牺盟会成立后，开始在全山西省内宣传左翼思想、组织民团并在学生中取得了一定的影响力。在牺盟会的领导下，山西的社会主义者正在逐步壮大之中。§!"
+ SHX_radical_socialist_party_long:0 "山西牺牲救国同盟会(Shanxi Sacrifice for the Nation Alliance)\n§g自1925年北伐战争开始后，山西省内的左翼开始活跃起来与远在南方的国民党和亲近左翼的冯玉祥和他的国民军一起联合起来抵抗北洋政府。随着北伐战争的失利，山西省境内的国民党开始分裂。以余心清为首的支持宋庆龄的一派获得了民心并和省内的工团党支部一起退居太行山中的昔阳县大寨村，而胡景通为首的拥汪派则流亡海外。1932年上海起义后潜伏大寨村的三股山西左翼势力分别是余心清领导的国民党-临委会、彭真领导的工团党山西支部和贾进财及陈永贵等本地农民联合创建的农业社会主义组织社会革命联盟合并为了一个全新的左翼组织即山西牺牲救国同盟会，牺盟会成立后，开始在全山西省内宣传左翼思想、组织民团并在学生中取得了一定的影响力。在牺盟会的领导下，山西的社会主义者正在逐步壮大之中。§!"
  SHX_social_democrat_party:0 "国民军"
  SHX_social_democrat_party_long:0 "国民军(Guominjun)\n§g国民军，或者叫西北军，是军阀冯玉祥控制的武装集团，它虽然在意识形态上与国民党相似，但是由于地理阻隔，它们又彼此独立。国民军的独特之处在于严明的纪律、强烈的意识形态动力和优秀的训练水平——所有这些都使它举国闻名。国民军的军纪和动力来源于对冯玉祥的忠诚，而有趣的是，由于冯玉祥本人的基督教信仰（尽管他坚信国民军士兵不必是基督徒），整个国民军中有大量基督教和准社会主义的声音。在反奉战争中，国民军在与直军和奉军的战斗后几近崩溃，冯玉祥不得不将国民军残部撤到了军阀阎锡山统治的山西省。虽然阎冯两人结成了某种务实的联盟，但国民军依然是晋陕两省规模最大的武装部队——冯玉祥无疑会利用这一优势。§!"
  SHX_social_liberal_party:0 "张自忠派"
@@ -194,6 +194,8 @@
  SHX_national_populist_party:0 "洗心社"
  SHX_national_populist_party_long:0 "洗心社(Xixinshe)\n§g赵戴文是阎锡山尊重的为数不多的几个在世人物之一，他是阎锡山的老师，对阎锡山的政治哲学有深刻的影响。赵戴文是同盟会成员之一，饱读诗书，潜心佛学，他很可能一手参与了阎锡山的新儒家思想的融合与策划。洗心社是阎锡山推广爱国儒家思想的产物，尽管为了推广洗心社花了很大的力气，但真正愿意相信新儒家的“信徒”仍寥寥无几，而且当政府不再注意与授权集会后，参加集会的人数骤减。但社会上仍有狂热分子自行参加集会，这种反动运动提醒着阎锡山进行自上而下的改革。这些新儒家结社是阎锡山减少国民军民间影响的主要手段，尽管他们暂时不成风气，但也已在山西无处不在了。§!"
 
+ SHX_feng_social_democrat_party:0 "国民党(临委会)"
+ SHX_feng__social_democrat_party_long:0 "国民党（临时行动委员会）\n§g国民党在山西只有微弱支持，且集中在农业派周围，鉴于山西农民的悲惨处境，这不足为奇。冯玉祥选择了他们做为自己的盟友的唯一原因不过觊觎孙中山的遗产。§!"
  SHX_yan_social_democrat_party:0 "洗心社"
  SHX_yan_social_democrat_party_long:0 "洗心社(Xixinshe)\n§g赵戴文是阎锡山尊重的为数不多的几个在世人物之一，他是阎锡山的老师，对阎锡山的政治哲学有深刻的影响。赵戴文是同盟会成员之一，饱读诗书，潜心佛学，他很可能一手参与了阎锡山的新儒家思想的融合与策划。洗心社是阎锡山推广爱国儒家思想的产物。§!"
  SHX_yan_authoritarian_democrat_party:0 "陕军"
@@ -478,6 +480,8 @@
  SHX_yan_loyalist_desc: "§L该名将领隶属于阎锡山的晋军。§!"
 
  SHX_model_governor_tt: "修正§Y阎锡山§!：\n$MODIFIER_COMMAND_POWER_GAIN_MULT$：§G+25%§!"
+ shx_feng_goverment_left_tt: "冯玉祥选择了§R左翼§!盟友们"
+ shx_feng_goverment_right_tt: "冯玉祥选择了§g右翼§!盟友们"
  shx_education_yan_path: "§L山西决定高等教育优先§!"
  shx_education_feng_path: "§L山西决定普及教育优先§!"
  SHX_yan_land_reform: "§L山西寻求推行土地兼并规制§!"
@@ -681,6 +685,16 @@
  shx.yan.6.t:0 "媒体审查"
  shx.yan.6.d:0 "目前在省境内和在那些工会、学联、农社内部运作的秘密组织正在分享他们的社会主义文学和理论。这些东西无非是对工团主义、社会主义、共产主义和其他腐败意识形态的宣传，撕裂社会，造成混乱，对我们社会百害而无一利。我们需要建立新闻审查制度来阻止我们社会的这一议程，并拯救我们无辜民众的思想。随着一切的马克思主义、工团主义报纸、广播、电影和文学作品都被审查、销毁或以其他方式从公众的视野中消失，社会主义的幽灵将不再笼罩我们的山乡。"
  shx.yan.6.a:0 "言论自由，但社会主义者没有"
+
+ shx.feng.1.t:0 "山西国民党"
+ shx.feng.1.d:0 "尽管冯玉祥并非工团主义者，对社会主义也十分警惕，但他还是决定在二十年代的关键年月里与国民党共存亡。1925年，冯玉祥观摩了孙中山先生的演说，并从中获益颇丰，他尤为关心三民主义，认为这种理论十分有用，可以作为工具加强对国民军的控制。而孙中山在1925年的适时去世，让冯玉祥在成为北方革命领袖的道路上再无任何对手，他进而向手下广泛传播孙中山的讲话要义。\n\n冯玉祥与孙中山的继任者及国民党的关系更为冷淡，他把国民党看作权宜之盟友，希望北伐之后能通过国民党接触海外（也许能获得第三国际援助）。冯玉祥在宣传思想时基本只提三民主义（多提三民主义可以少提国民党），且其本人据传于孙中山去世后一直在酝酿争夺国民党的领导权。尽管国民党坚持认为冯玉祥是国民党的附属，但冯玉祥周边的人基本没人认为冯玉祥会屈于国民党之下（他反而希望让国民党为自己所用），而北伐的失败让这种关系更无意义。\n\n不过，在北方仍然存在着某种联盟——在冯玉祥的设想中，国民党将会是弱于国民军的一个小伙伴。而国民党各团体，尤其是改组同志会则倾向于把国民军的队伍当成安全的港湾，并为冯玉祥的运动提供一份积极、有活力的左翼力量。"
+ shx.feng.1.a:0 "真正的革命就此开始！"
+ shx.feng.2.t:0 "百姓崇拜"
+ shx.feng.2.d:0 "问：“谁供你们衣食？”\n答：“是老百姓！”\n问：“如果有人蒙骗、压迫老百姓，我们该怎么做？”\n答：“推翻他！”\n问：“如果冯玉祥压迫老百姓，我们该怎么做？”\n答：“推翻冯玉祥！”\n\n也许是想展示国民军和社会主义活动家之间的联系加深，冯玉祥刻意投放了大量的政治资本以创造一种可以被概括为“百姓崇拜”的东西。国民军愈来愈重视自己为平民百姓发声的定位，像上文般的对答在国民军军中也相当普遍。除了批评帝国主义和军阀的铺张浪费外，这篇新问答书还谴责了中国分裂和列强剥削的历史轮回，并鼓励老百姓以斗争求正义。问答书中的最后一问就简明地总结了其主题：\n\n“那么，何谓（孙中山先生鼓励我们投身的）斗争？”\n“为革命挥洒热血；为主义牺牲自我；坚持奋斗到底；不懈努力，定将获胜！”"
+ shx.feng.2.a:0 "这就叫“斗争”！"
+ shx.feng.3.t:0 "妥协的艺术"
+ shx.feng.3.d:0 "尽管冯玉祥长年宣布自己为人民而战，但是冯玉祥并非工团主义者，对社会主义也十分警惕，虽然国民党等左翼势力同他合作了数十年。而在现实政治面前，冯玉祥果断的抛弃了国民党，他宣布这些人在汪精卫的领导下早已经背弃了孙中山的遗志，背叛了三民主义。当然，这并非是他突然的转变，长期以来他都只把国民党看作权宜之盟友，希望北伐之后能通过国民党接触海外（也许能获得第三国际援助）。冯玉祥在宣传思想时基本只提三民主义（多提三民主义可以少提国民党），且其本人据传于孙中山去世后一直在酝酿争夺国民党的领导权。\n\n如今，冯玉祥登上山西省的大位后，国民党的力量已经不够看了，他选择接纳了阎锡山的遗产，他拜访了遗留在太原而没有逃离的赵戴文，在彻夜长谈后，赵戴文公开赞扬了冯玉祥的政策，甚至在话语间明里暗里暗示冯玉祥要比阎锡山更加优秀。在军队方面商震早就已经投入了国民军的麾下，此前批判他背叛的傅作义，如今也在足够的自主权吸引下不再表达对国民军的敌意。"
+ shx.feng.3.a:0 "识时务者为俊杰"
 
  shx.edu.0.t:0 "教育改革接近完成"
  shx.edu.0.d.yan:0 "尽管存在种种困难和反对声音，山西最终仍然成功完成了一切必要的技术突破，奠定了其十年计划的基础。他们的山西大学，山西国民师范学院以及各种技术学校（之前已经是腐败至极，烂到根子上了）现在也经过努力摆脱了从前的腐朽，一套崭新的，更强大的学校系统展现在了人们面前。无能又摆烂的教授被取代或是被改造，随之而来的是国外学者，国内技工和完美的学术氛围。学生则被一个棒槌一个甜枣地规训了起来。大学校园，虽然还是一个学生休闲的地方，但黑恶恶性事件数量已经显著减少。缺乏使用而长期关闭的校园图书馆已经重新开放，新一代学生们正在朝气蓬勃地为新山西与新中国之崛起而读书。教授和学者们的研究工作得到资助，他们很快就可以与北京乃至世界的科学家并肩而立。\n\n当然，山西仍然存在许多问题，主要是高等教育内部仍然存在着阶层间的不平等。虽然来自较低阶层的学生能获得奖学金，但绝大部分学生仍然来自较上层的阶级。但话说回来，没有人能否认山西相较于世纪初的境况来看已经好了太多，好日子还在后头呢！"
@@ -1129,6 +1143,10 @@
  SHX_confucian_order:0 "儒家秩序"
  SHX_confucian_order_desc:0 "儒家社会正在西北地区出现。晋系军阀治下的人民团结在其模范督理身后，努力改造山西。这里乡绅肆意妄为，而卑微的农民只能自认其命。这里经济和科技长足发展，同时保留了中国传统价值观。国民军的革命民粹式的花言巧语已被噤声，人民显然已经作出了选择：我们将走向繁荣！"
  SHX_mass_censorship:0 "新闻审查"
+ SHX_towards_revolution_idea:0 "迈向革命未来"
+ SHX_towards_revolution_idea_desc:0 "陕西人民看来宁要革命不要稳定。在革命者、军队、农村贫民和学生激进分子的大力支持下，民众开始集结在冯玉祥驻扎在陕西的国民军周围。他们通过此举推行自己的愿景，即将国家和军队集中在大帅手中，推行必要的社会改革，并击垮反革命势力。要是山西能加入我们，未来一定充满光明。"
+ SHX_stable_future_idea:0 "稳健的未来"
+ SHX_stable_future_idea_desc:0 "山西人民似乎选择了稳定而不是革命。冯玉祥最终全盘接受了阎锡山留下的庞大政府和政治“遗产”，他依旧宣称自己在为人民而战，但是他同时也表示，乡绅、商贾、实业家们同样是人民的一部分，他们的权利也需要得到保护。也许山西最终会步向革命的未来，但是很明显不是现在。"
 
  SHX_model_province_taiyuan:0 "模范省的心脏"
  SHX_model_province_taiyuan_desc:0 "太原是阎锡山政府的掌上明珠，长期受到省政府的高度偏爱。在我们的英明统治下，以进步改革为傲的太原已成为我省打造模范省形象以供他人膜拜的中心。"
