这也删除，那也删除，就是有这样的事情

--- a/localisation/KR_Shanxi_l_simp_chinese.yml
+++ b/localisation/KR_Shanxi_l_simp_chinese.yml
@@ -1015,6 +1015,8 @@
  SHX_underdeveloped_mountain_economy_feng1_desc:0 "在热火朝天的组织和生产之后，山西的工业发展达到了高潮。非官方的造产救国社正积极推进晋商在省内收购商品，减少对外省的依赖。虽然还有许多类似的尝试往往无疾而终，但大多措施都得到了民众对认可，全新的经济正在生长。腐败在大量的监管下退却，管理者和劳动者们正在习惯工厂的工作。工资正在逐渐上涨，但当局采取了更前卫的措施。为了稳定货币，抑制已有的巨大通货膨胀，太原有不少雄心勃勃的专家主张采用由政府储存的食品和商品支持的生产证书来代替传统的货币。毫无疑问有些人认为需要谨慎对待这些重大变化，但晋系的领导层决定，向更深层次的经济改革迈进。"
  SHX_underdeveloped_mountain_economy_feng2:0 "革命山西经济"
  SHX_underdeveloped_mountain_economy_feng2_desc:0 "阎锡山曾经在太原和冯玉祥闲聊的时候夸下海口：“总有一天咱个可以随便用咱们的人去开省里的金山银山。”如今真的出现了这样革命的经济体制。虽然对拿生产证书当钞票这种事的批评不断，但当局依然在继续改革，在各个县城甚至乡镇里设立由各地政府管理的生产消费合作社。农民和手工业者的产品只能出售给这些合作社，使得太原方面可以高度控制各地经济。而太原也同样在努力制定价格，调节产量，挤压省外竞争，虽然没什么人真信他们在干，但经济改革仍取得了部分成功。不管怎么说，公众普遍都是渴望变革的，好歹省外谈到山西总能多一点谈资。话说到底，晋系依旧没忘他们要解放全中国的承诺，这种合作社则是他们往后计划的基础。"
+ SHX_underdeveloped_mountain_economy_feng3:0 "革命山西经济"
+ SHX_underdeveloped_mountain_economy_feng3_desc:0 "阎锡山曾经在太原和冯玉祥闲聊的时候夸下海口：“总有一天咱个可以随便用咱们的人去开省里的金山银山。”如今真的出现了这样革命的经济体制。虽然对拿生产证书当钞票这种事的批评不断，但当局依然在继续改革，在各个县城甚至乡镇里设立由各地政府管理的生产消费合作社。农民和手工业者的产品只能出售给这些合作社，使得太原方面可以高度控制各地经济。而太原也同样在努力制定价格，调节产量，挤压省外竞争，虽然没什么人真信他们在干，但经济改革仍取得了部分成功。不管怎么说，公众普遍都是渴望变革的，好歹省外谈到山西总能多一点谈资。话说到底，晋系依旧没忘他们要解放全中国的承诺，这种合作社则是他们往后计划的基础。"
  SHX_underdeveloped_mountain_economy_yan:0 "发展山区经济"
  SHX_underdeveloped_mountain_economy_yan_desc:0 "大量涌入的省外资本有助于稳定经济并促进以太原为中心的工业化的进一步发展。山西的工业潜能十分巨大，它煤铁资源丰富，劳动力密集。如今经过新所有权重组后的旧工业蒸蒸日上，造纸厂、制革厂和蒸馏酒厂的扩建又创造了一个巨大的就业市场。同样为了满足现有需求，一座耐火砖厂和一座水泥厂也在兴建。一切都欣欣向荣，但障碍也层出不穷。贪污腐败和任人唯亲横行肆虐，好在北京的投资者们暂时还没被这恐怖的景象吓倒。但做生意，谁管那么多呢。山西的商人们也不时抱怨某些投机者，这些人对经济有着更深入的了解，经常鼓励他们生产过量的货物。"
  SHX_underdeveloped_mountain_economy_yan1:0 "山区经济重振"
@@ -1059,6 +1061,8 @@
  SHX_agriculture_reform_Yan1_desc:0 "阎锡山一派在施政中常常借鉴儒学思想，尤其尊崇其和谐、威权和节制思想。山西政府公文的字里行间经常显露出对混乱和革命的担忧，因其希望建立一个更均衡、更符合道德原则的体系。近来山西改善农业状况的努力印证了这点，省领导曾已落实了一系列改革措施，包括禁止以诉讼作为胁迫手段，设置地租上限，重新分配一些财产，并对乡绅及其控制的地方政府进行更进一步的管控。对乡村的有形资产投资也在进行，提高省内农产量的同时改善了民众生活。督理更是大加提倡履行高尚义务的责任，并把自己的形象塑造为集儒家美德于一身的“君子”。历史和时间将会证明这是否只是宣传手段，但就算是他的批评者也会同意，山西农民乃至乡绅的状况与十年计划开始时相比已大为改善。"
  SHX_agriculture_reform_Feng1:0 "耕者有其田"
  SHX_agriculture_reform_Feng1_desc:0 "冯玉祥一派借用大量著名思想家、哲学家和改革家之言，强调将土地从乡绅（强占了大部分土地）手中返还给常年耕作其上的普通人的重要性。也许有些人会说这看起来很容易，声称即便在十年计划开始前大部分山西农民都不是佃农。但这掩盖了省内根深蒂固的体制和照本宣科的反对力量有多么强大，山西改革家正是历经如此艰难困苦才有今天的成就。涵盖多个方面的改革措施已经出炉，包括将资产大规模重分配给农民并加强对富人（长久逍遥于法外）的法律约束。一开始这些措施产生了不少混乱，政府只是将其轻描淡写为“暴力”，不过最后是卑微的农民取得了胜利。对农村的有形资产投资正在进行，以期提高农产量并减少农民对高利贷的依赖，不过这些措施产生的混乱让一些地区进展有所滞后。不可否认的是，山西领导层做的这些措施确实激励了接受其帮助的人们，扭转了对政府的怀疑情绪，为民众的长期支持打好了基础。上述一切让督理成为老百姓心目中的英雄，人民的捍卫者，愿意尽其所能建立一个更公平的体制。督理的声望广为流传，远远超出这个不起眼省份的边界。历史和时间将会证明这是否只是宣传手段，但就算是他的批评者也会同意，山西农民的状况与十年计划开始时相比已大为改善。"
+ SHX_agriculture_reform_Feng2:0 "耕者有其田：§R彻底土地革命§!"
+ SHX_agriculture_reform_Feng2_desc:0 "冯玉祥一派借用大量著名思想家、哲学家和改革家之言，强调将土地从乡绅（强占了大部分土地）手中返还给常年耕作其上的普通人的重要性。也许有些人会说这看起来很容易，声称即便在十年计划开始前大部分山西农民都不是佃农。但这掩盖了省内根深蒂固的体制和照本宣科的反对力量有多么强大，山西改革家正是历经如此艰难困苦才有今天的成就。涵盖多个方面的改革措施已经出炉，包括将资产大规模重分配给农民并加强对富人（长久逍遥于法外）的法律约束。一开始这些措施产生了不少混乱，政府只是将其轻描淡写为“暴力”，不过最后是卑微的农民取得了胜利。对农村的有形资产投资正在进行，以期提高农产量并减少农民对高利贷的依赖，不过这些措施产生的混乱让一些地区进展有所滞后。不可否认的是，山西领导层做的这些措施确实激励了接受其帮助的人们，扭转了对政府的怀疑情绪，为民众的长期支持打好了基础。上述一切让督理成为老百姓心目中的英雄，人民的捍卫者，愿意尽其所能建立一个更公平的体制。督理的声望广为流传，远远超出这个不起眼省份的边界。历史和时间将会证明这是否只是宣传手段，但就算是他的批评者也会同意，山西农民的状况与十年计划开始时相比已大为改善。"
  SHX_guominjun_unrest_idea:0 "国民军不满"
  SHX_guominjun_unrest_idea_desc:0 "§C国民军目前的力量为[SHX.GMJ_coup_strength]。§!"
  GMJ_strength_variable_perception0:0 "§g火已熄灭§!"
