--- a/localisation/KR_Hunan_l_simp_chinese.yml
+++ b/localisation/KR_Hunan_l_simp_chinese.yml
@@ -1608,7 +1608,7 @@
  HNN_ji_quan_tot:0 "§R极权派§!支持度将上升"
  HNN_zheng_tong_tot:0 "§M正统派§!支持度将上升"
  HNN_ji_guan_tot:0 "§r技官派§!支持度将上升"
- HNN_shi_chang_tot:0 "§g市场派§!支持度将上升"
+ HNN_shi_chang_tot:0 "§Y市场派§!支持度将上升"
  HNN_ju_jue_tooltip:0 "§G如果你想让特科政变就选这个§!"
  HNN_people_community_tt:0 "§L这是一项前无古人，后无来者的壮举§!"
  HNN_factory_change_tt:0 "§Y解锁一个新的工业公司§!"
