什么时候上天能赐我一批美工黑奴？

--- a/localisation/KR_Shanxi_l_simp_chinese.yml
+++ b/localisation/KR_Shanxi_l_simp_chinese.yml
@@ -196,6 +196,8 @@
 
  SHX_feng_social_democrat_party:0 "国民党(临委会)"
  SHX_feng__social_democrat_party_long:0 "国民党（临时行动委员会）\n§g国民党在山西只有微弱支持，且集中在农业派周围，鉴于山西农民的悲惨处境，这不足为奇。冯玉祥选择了他们做为自己的盟友的唯一原因不过觊觎孙中山的遗产。§!"
+ SHX_feng_social_liberal_party:0 "太原商会联合"
+ SHX_feng_social_liberal_party_long:0 "太原商会联合\n§g并非所有商人都愿意听从北京或是阎锡山的命令，在山西的命运之赌中，还有的商人选择投入了冯玉祥的怀抱，如今事实证明，他们是对的。当阎锡山败退之后，他们便接管了阎派资产。§!"
  SHX_yan_social_democrat_party:0 "洗心社"
  SHX_yan_social_democrat_party_long:0 "洗心社(Xixinshe)\n§g赵戴文是阎锡山尊重的为数不多的几个在世人物之一，他是阎锡山的老师，对阎锡山的政治哲学有深刻的影响。赵戴文是同盟会成员之一，饱读诗书，潜心佛学，他很可能一手参与了阎锡山的新儒家思想的融合与策划。洗心社是阎锡山推广爱国儒家思想的产物。§!"
  SHX_yan_authoritarian_democrat_party:0 "陕军"
@@ -758,6 +760,8 @@
  SHX_she_hui_fu_li_desc:0 "许多深陷于当代政治的人可能常常忘记，为受压迫者提供帮助并非社会主义的理念，儒家理念中早已提及“故人不独亲其亲，不独子其子，使老有所终，壮有所用，幼有所长，矜、寡、孤、独、废疾者皆有所养。”这就是儒家的理想社会，这也是阎锡山督理理想中的社会模样。"
  SHX_she_hui_fu_liB:0 "社会福利"
  SHX_she_hui_fu_liB_desc:0 "许多深陷于当代政治的人可能常常忘记，为受压迫者提供帮助并非社会主义的理念，儒家理念中早已提及“故人不独亲其亲，不独子其子，使老有所终，壮有所用，幼有所长，矜、寡、孤、独、废疾者皆有所养。”这就是儒家的理想社会，这也是阎锡山督理理想中的社会模样。"
+ SHX_she_hui_fu_liC:0 "社会福利"
+ SHX_she_hui_fu_li_desc:0 "那时，耶稣说：「谁因你们属于基督的名分而给你们一杯水喝，我实在告诉你们，他决不会失掉他的赏报。谁使这些信我的一个小子失足犯罪，倒不如把大磨石拴在那人的颈项，扔到海里更好。如果你的手使你失足犯罪，把它砍下来！你带着伤残进入永生，比双手俱全而下地狱，进入那永不熄灭的火里更好！如果你的一只脚使你失足犯罪，把它砍下来！你跛脚进入永生，比双脚俱全而下地狱更好！如果你的眼睛使你失足犯罪，把它挖出来！你只有一只眼睛进入天主的国，比带着双眼被投入地狱里更好。那里的虫子不死，火也不灭。因为每个人都要被火像盐一样腌起来。盐是好的，如果盐变得不咸，你们怎能使它调味？你们之间应当有盐，彼此和平相处！」"
  SHX_a_higher_purpose_idea:0 "重整本地政治"
  SHX_a_higher_purpose_idea_desc:0 "山西正处于一个十字路口，晋系统治下的全省人民的集体意志必须很快决定他们将追求什么样的未来。阎锡山代表了一种专制的、受儒家影响的领导风格——这是几十年来以稳定为中心的统治的延续。这位老督理思想保守，但愿意接受现代性，他承诺要恢复中国被窃取的平衡与和谐。在他的带领下，山西一定会一起前进！"
  SHX_confucian_order:0 "儒家秩序"
@@ -767,6 +771,14 @@
  SHX_towards_revolution_idea_desc:0 "陕西人民看来宁要革命不要稳定。在革命者、军队、农村贫民和学生激进分子的大力支持下，民众开始集结在冯玉祥驻扎在陕西的国民军周围。他们通过此举推行自己的愿景，即将国家和军队集中在大帅手中，推行必要的社会改革，并击垮反革命势力。要是山西能加入我们，未来一定充满光明。"
  SHX_stable_future_idea:0 "稳健的未来"
  SHX_stable_future_idea_desc:0 "山西人民似乎选择了稳定而不是革命。冯玉祥最终全盘接受了阎锡山留下的庞大政府和政治“遗产”，他依旧宣称自己在为人民而战，但是他同时也表示，乡绅、商贾、实业家们同样是人民的一部分，他们的权利也需要得到保护。也许山西最终会步向革命的未来，但是很明显不是现在。"
+ SHX_national_revolution:0 "国民革命"
+ SHX_ling_shi_yue_fa:0 "勘定省宪"
+ SHX_ling_shi_yue_fa_desc:0 "无论如何，阎派政府那般独裁的政治都应当结束了，在冯玉祥大帅的主持下，山西将顺应时代，勘定一部全新的省宪法，山西将成为中国民主的先锋。"
+ SHX_nationalist_order:0 "民族主义秩序"
+ SHX_nationalist_order_desc:0 "一个以民族主义为理念的政权在西北冉冉升起。晋系军阀治下的民众团结在基督将军身边，努力改造山西。在这里，老百姓得其应得，中国的敌人也被击垮。这里正发生这革命性的变革，旧有的压迫性政权被彻底推翻，一个更适合此地未来的政权取而代之。阎派的反动迂腐之言已被噤声，人民显然已经作出了选择：我们将走向繁荣！"
+ SHX_strengthen_local_councils:0 "强化地方议会"
+ SHX_strengthen_local_councils_desc:0 "作为陕西为计划争取公共支持的一部分，有必要赋予各村镇加强地方委员会的自治区权。其中的代表性成就便是冯玉祥创办的农村培训学院，其旨在教授农民在冯玉祥的领导下进行自我管理的基本常识。这当然引发了乡绅们大量的不满，传统上他们在这些委员会和省政府中执掌大权——正试图削弱村委会的权力。但就算是外来者也应当注意不要高估这些措施在推行西式自由民主方面的作用——其本意虽然是好的，但本质上更接近孙中山的训政思想，在中国得以建立真正的民主之前，还有很长的路要走。"
+ SHX_Golden_Economy_idea:0 "社会平等"
 
  SHX_model_province_taiyuan:0 "模范省的心脏"
  SHX_model_province_taiyuan_desc:0 "太原是阎锡山政府的掌上明珠，长期受到省政府的高度偏爱。在我们的英明统治下，以进步改革为傲的太原已成为我省打造模范省形象以供他人膜拜的中心。"
@@ -990,7 +1002,7 @@
  SHX_qi_ye_gai_ge:0 "企业改革"
  SHX_qi_ye_gai_ge_desc:0 "随着经济的发展，企业改革也陆续提上了日程。现在山西省内的大部分企业均为私营企业，为了扩大政府在经济领域的管控，决定将关键部门企业重新开始国有化。同时，其他的私营企业也开始陆续实行公司制股份制。同时也设立企业监管委员会并对一些有大型商会创立的私营企业进行管控。"
  SHX_mo_shou_cheng_gui:0 "墨守成规的现代化"
- SHX_mo_shou_cheng_gui_desc:0 "随着阎锡山省长在逐步按照自己的想法进行改革后，山西从各个领域开始注入新的活力。同时随着现代化项目的开发以及阎锡山思想的传播，山西也从各个方面开始变得更加繁荣。虽然在政治思想上阎锡山仍然墨守成规，但他的野心也越来越膨胀并开始为了统一全国做着充分的准备。"
+ SHX_mo_shou_cheng_gui_desc:0 "随着阎锡山省长在逐步按照自己的想法进行改革后，山西从各个领域开始注入新的活力。同时随着现代化项目的开发以及阎锡山思想的传播，山西也从各个方面开始变得更加繁荣。"
 
  #冯玉祥
  SHX_feng_yu_xiang:0 "基督将军的归来"
@@ -1086,6 +1098,9 @@
  shx.earlygame.15.feng.d:0 "第四次直奉战争于1928年收场，留下一地血腥，山西省军和国民军新近组建起一支联军，自此，吴佩孚将其专制统治延伸至山西的野望遭到了遏制。而联军同他们所保卫的领土和财富相比，实在臃肿得过分，不过依靠省内山河之险，联军最终还是迫使中央军铩羽而归。\n\n尽管曾共拒外敌，但阎锡山和冯玉祥都对彼此心里的长远盘算戒心满满，因此双方都没有认真打算过整合两家部队。大多数时候，国民军盘踞陕北，通过小作坊土造、从西安走私或盗窃，以及翻找二十年代旧军火库存货等渠道维持武器补充；晋军则经略山西老巢，一心守着太原兵工厂制枪造炮。\n\n如今晋军在我们阵前溃不成军，我们终于有机会整编两军。对待晋军我们有两种处理方法：一是吸纳愿意加入我们事业的士兵，并向他们灌输我们的意识形态；二是只撤换晋军高层，保留部队建制及基层军官职位，并选一位新督军节制晋军。"
  shx.earlygame.15.feng.a:0 "中国军人，前进！"
  shx.earlygame.15.feng.b:0 "最好不要自找麻烦。"
+ shx.earlygame.16.t:0 "省议会"
+ shx.earlygame.16.d:0 " "
+ shx.earlygame.16.a:0 " "
  shx.409.t:0 "大清行省"
  shx.409.d:0 "由于对宣统维新的支持，山西省长阎锡山开始自称“山陕总督”，并改挂大清的省旗以示对北京新政府的支持。"
  shx.409.a:0 "很好！"
@@ -1108,6 +1123,12 @@
  shx.yan.6.t:0 "媒体审查"
  shx.yan.6.d:0 "目前在省境内和在那些工会、学联、农社内部运作的秘密组织正在分享他们的社会主义文学和理论。这些东西无非是对工团主义、社会主义、共产主义和其他腐败意识形态的宣传，撕裂社会，造成混乱，对我们社会百害而无一利。我们需要建立新闻审查制度来阻止我们社会的这一议程，并拯救我们无辜民众的思想。随着一切的马克思主义、工团主义报纸、广播、电影和文学作品都被审查、销毁或以其他方式从公众的视野中消失，社会主义的幽灵将不再笼罩我们的山乡。"
  shx.yan.6.a:0 "言论自由，但社会主义者没有"
+ shx.yan.7.t:0 "《村话》"
+ shx.yan.7.d:0 "阎锡山政府自觉争取民心的工作已有突破，因此积极地利用最近舆论势头的转变发起了公关运动。阎锡山最喜欢的官办报纸《村话》在头条刊登了一篇文章，其痛斥了国民军的失败，同时赞扬了阎锡山在本省取得的无数成功。趁此机会，他们也创作了一系列反社会主义歌曲，其中一首是这样的：\n\n国民军杀人如割草\n无论贫富皆难逃\n富人要觉悟，穷人要知道\n社会主义来了一律齐糟糕。哎哟！\n\n事实上，打从国民军来到陕西的第一天开始，阎督理就不是害怕他们的军队，而是害怕当地贫苦百姓被国民军的激进倾向所吸引。他敏锐地指出“要镇压革命，三分靠军事，七分靠政治；而要阻止革命滋生，九分都要靠政治”。虽然如此，阎锡山依旧靠从年轻士绅中抽调人手，动员起了一支反社会主义民团。清算即将到来，阎锡山恐怕会是最后的赢家。"
+ shx.yan.7.a:0 "做好“十分”的把握！"
+ shx.yan.8.t:0 "通往人间乐土"
+ shx.yan.8.d:0 "“父老乡亲们听我说！我阎百川打心底里只有一个愿望，就是乡亲们吃得好！睡得香！”\n\n阎锡山本人为了山西的控制权走遍了山西各地，组织了大规模的运动与集会，号召了一大群百姓参加。他的身边还带了一支大型乐队，为他演奏欢快的歌曲，像是“给当局和工人的赞歌”等等，这些歌让听众兴致高昂，使各个会场如同过节一样。除了在山西省内活动，他还去了陕西国民军的地盘上进行演说，甚至在延安举办了这么一场集会，而反对他的人也只能眼巴巴地看着。\n\n他的巡回以在[SHX.Capital.GetCapitalVictoryPointName]的最后演讲告终，几十万甚至上百万百姓都从演讲者的口中听到了他们的督理为建立“乐土”而做出的努力，省长本人则大谈特谈他为信众规划的未来。演讲结束后，阎锡山安排手下最精锐的士兵和许多太原大学的学生在火炬的照耀下沿街游行，喊着他们的口号，挥舞着支持阎锡山的标语。这种秀肌肉的行为不一定能打败他的敌人，但多少能让人明白他才是山西的主人。"
+ shx.yan.8.a:0 "人民现在会听他的。"
 
  shx.feng.1.t:0 "山西国民党"
  shx.feng.1.d:0 "尽管冯玉祥并非工团主义者，对社会主义也十分警惕，但他还是决定在二十年代的关键年月里与国民党共存亡。1925年，冯玉祥观摩了孙中山先生的演说，并从中获益颇丰，他尤为关心三民主义，认为这种理论十分有用，可以作为工具加强对国民军的控制。而孙中山在1925年的适时去世，让冯玉祥在成为北方革命领袖的道路上再无任何对手，他进而向手下广泛传播孙中山的讲话要义。\n\n冯玉祥与孙中山的继任者及国民党的关系更为冷淡，他把国民党看作权宜之盟友，希望北伐之后能通过国民党接触海外（也许能获得第三国际援助）。冯玉祥在宣传思想时基本只提三民主义（多提三民主义可以少提国民党），且其本人据传于孙中山去世后一直在酝酿争夺国民党的领导权。尽管国民党坚持认为冯玉祥是国民党的附属，但冯玉祥周边的人基本没人认为冯玉祥会屈于国民党之下（他反而希望让国民党为自己所用），而北伐的失败让这种关系更无意义。\n\n不过，在北方仍然存在着某种联盟——在冯玉祥的设想中，国民党将会是弱于国民军的一个小伙伴。而国民党各团体，尤其是改组同志会则倾向于把国民军的队伍当成安全的港湾，并为冯玉祥的运动提供一份积极、有活力的左翼力量。"
@@ -1118,6 +1139,33 @@
  shx.feng.3.t:0 "妥协的艺术"
  shx.feng.3.d:0 "尽管冯玉祥长年宣布自己为人民而战，但是冯玉祥并非工团主义者，对社会主义也十分警惕，虽然国民党等左翼势力同他合作了数十年。而在现实政治面前，冯玉祥果断的抛弃了国民党，他宣布这些人在汪精卫的领导下早已经背弃了孙中山的遗志，背叛了三民主义。当然，这并非是他突然的转变，长期以来他都只把国民党看作权宜之盟友，希望北伐之后能通过国民党接触海外（也许能获得第三国际援助）。冯玉祥在宣传思想时基本只提三民主义（多提三民主义可以少提国民党），且其本人据传于孙中山去世后一直在酝酿争夺国民党的领导权。\n\n如今，冯玉祥登上山西省的大位后，国民党的力量已经不够看了，他选择接纳了阎锡山的遗产，他拜访了遗留在太原而没有逃离的赵戴文，在彻夜长谈后，赵戴文公开赞扬了冯玉祥的政策，甚至在话语间明里暗里暗示冯玉祥要比阎锡山更加优秀。在军队方面商震早就已经投入了国民军的麾下，此前批判他背叛的傅作义，如今也在足够的自主权吸引下不再表达对国民军的敌意。"
  shx.feng.3.a:0 "识时务者为俊杰"
+ shx.feng.4.t:0 "赋权地方议会"
+ shx.feng.4.d:0 "水能载舟，亦能覆舟。你很难说山西是个“民主政府”，但毫无疑问，最近几周山西在实行乡级农民民主方面取得了很大的进步。种了几十年的花在今年终于结了果，它始于阎锡山为建立他所谓的“驭民政府”，阎锡山命令每个乡都要选出一位乡长，建立一个乡议会。据说这些举措学自周代的乡治，可在现代看来并不特别有效，也许是因为阎锡山只想要个橡皮图章，也许是因为乡长们多钟情于吃喝嫖赌。阎锡山集团对这些委员会成员进行了严格的约束，县长也常常直接自行任命乡长。\n\n但时过境迁，政治氛围随着实际情况的发展发生了变化。冯玉祥和国民党在农村地区做出了许多努力，提高了乡民的政治素养，并协助建立了由农民组成、为农民着想的领导机构。漫漫前路，遍是芬芳。"
+ shx.feng.4.a:0 "应该听听老百姓的声音！"
+ shx.feng.5.t:0 "政治部"
+ shx.feng.5.d:0 "冯玉祥在加入国民党后，在国民党及其他社会主义执政党顾问的协助下成立了政治部，该部门由刘伯承负责领导（现已离任），冯玉祥对这个由社会主义主导的部门抱有警惕，将其置于严格管控下。北伐战争结束后，冯玉祥主动脱党，政治部也因此解散。然而，随着冯玉祥再度意图问鼎华北，他必须团结一切力量，冯玉祥重新启用了政治部，并在其中大肆安插亲信，希望能以此恢复部门凝聚力。\n\n各军、师、旅级单位再次设立政治部，并恢复了从团到排派遣政治委员的制度，在排一级，政治小组正在逐步建立。但由于部队缺乏思想教育，以及部分干部对新职务的不适应，同1927年一样，政治部在实际工作上仍有困难。一部分人认为重建政治部是为了培养政治委员，另一些人则将该部视为宣传机构，但无论如何，政治部模棱两可的处境并没有削弱国民军中愈发激进的思想和其对民族主义革命的决心。"
+ shx.feng.5.a:0 "共赴未来！"
+ shx.feng.6.t:0 "人民剧院"
+ shx.feng.6.d:0 "一间由冯玉祥及国民军资助的剧院将于今晚揭幕。冯玉祥在入座后与其他军官兴奋畅谈，等待演出开始。自南京出现了针对反租界运动的残酷暴力后，相关创作就开始出现，以展示无情的列强如何欺压中国。据说冯玉祥本人也捐了不少钱。而现在，国民军官兵塞满了整个剧院，他们都等着好戏开场。\n\n剧本作者是一位资深国民军军官，他穿着自己最华丽的礼服登上舞台。尽管他很紧张，有人看出来了，但他还是用谦虚而清脆的声音感谢观众到场。他解说道是次演出讲的是发生于八省联合的1936年芜湖反租界惨案，他还谈及了冯玉祥怎样请他和其他士兵参与演出。作者也提前为作品的质量向观众致歉，因为他并非专业写手，只是一名爱国者。但他希望可以透过自己的作品激发同胞们的爱国精神，作者在热烈的掌声中以一句话作总结：“洋人正在射杀我们的兄弟，劫掠我们的国家。为什么有人认为，我们不该拿起武器？”"
+ shx.feng.6.a:0 "我爱死这剧院了！"
+ shx.feng.6.b:0 "有趣，但我政务繁忙，下次吧。"
+ shx.feng.7.t:0 "第一幕"
+ shx.feng.7.d:0 "致完开幕辞后，这位军官向观众敬礼离场。话剧开幕，穿着粗糙蓝色工装的工人进场，并挤在“工厂”门前（台上没有布景，这在当时相当常见）。他们面向观众，尽泄不满。\n\n“我们每天做工十六小时，工钱却只有三十分！”\n“我们食不果腹，工钱微薄，有口难糊！”\n\n片刻后，一群街贩农民加入行列，神情同样沮丧。他们齐步踏前，向观众喊：\n\n“洋人让我们买卖不成！”\n“还抢走我们的米粮！”\n\n一群学生登上舞台，手执烂书，高举标语：\n\n“我们日日寒窗苦读，时刻为国而学，但毕业即失业！”\n“他们收我学费，嘲我文化，在学堂里只教谎话！”\n\n演员们稍作停顿，让对白沉入观众心里。作者在角落里瞥了观众一眼。无疑，作者成功引起了他们的共鸣。"
+ shx.feng.7.a:0 "大胆的序幕。"
+ shx.feng.7.b:0 "非常有趣，但我得走了。"
+ shx.feng.8.t:0 "第二幕"
+ shx.feng.8.d:0 "一名德国警官进场，对一名女工又拽又打。女工争脱，一边跑向工人一边高喊。\n\n“工厂老板要占我便宜，当我拒绝时，工厂把我赶了出来，还没收了我上周工钱！”\n\n工人、学生、农民及其他人一同呐喊（观众也加入其中），要求将工厂老板绳之以法。\n\n一名日本兵和一群欧洲兵走到警官一方。列强士兵举枪瞄准，观众倒彩如雷贯耳。数人中枪倒地，其他人夺路而逃，但新的抗议者亦开始加入。一面白色旗帜被由人群两翼递到前方，上面用大字写着：\n\n“我们要求公义！我们要求停止欺压！”\n\n德国警官回以枪响，又射杀了几名抗议者，游行队伍随即四散。"
+ shx.feng.8.a:0 "无耻的混蛋！"
+ shx.feng.8.b:0 "小孩子看不得这些，走了。"
+ shx.feng.9.t:0 "第三幕"
+ shx.feng.9.d:0 "警官与示威者离场，死伤者仍倒在台上。伤者呻吟求助，医生和助理手持担架登场。医生转向观众，开始发表演讲，讲述洋人和汉奸在1936年抗议时对中华民族所作的暴力和侮辱。他总结道：\n\n“难道你们认为，我们不该拿起武器吗？”\n\n演员们静待至掌声与欢呼平息，一名伤者爬上担架。他喊道：\n\n“他们打得我双目失明，但我宁可失去视力，也不愿目睹中国受辱！”\n\n死伤者家属登场，痛哭流涕。他们的领头人是一位老妇（由士兵扮演），她致闭幕辞道：\n\n“他们杀害了我两个儿子，打伤了我的三子，现在我要孤独终老了。但我要是还有能力的话，我一定会再生一个儿子，这样他就能为中国之自由而奋斗了！”\n\n剧院里响起了连锦不绝的掌声和喝彩声，观众们纷纷起立致意。冯玉祥向作者微笑——无疑，剧院在未来几周内都将座无虚席。"
+ shx.feng.9.a:0 "触人心弦的演出！"
+ shx.feng.10.t:0 "《冯玉祥北伐工作记》"
+ shx.feng.10.d:0 "随着摄影技术的进步，人们在报纸上甚至在电影院里看到照片或短片已不再是罕见的事，更不用说各国政府早已将电影作为宣传工具甚至军事教育材料了。在过去的十年里，为了获取新闻或享受娱乐，在电影院看电影现已成为全球流行的趋势，山西也不会例外。基督将军冯玉祥深知这种宣传在激励士兵和塑造其事业良好形象上所蕴含的力量，尤其是在人民剧院取得巨大成功之后。当他在简陋的木屋里独自阅读关于上海电影院和外国民族主义电影的报纸文章时，一个有趣的想法浮现了出来。在过去几周里，他一直在努力联系愿意为他拍摄电影的摄影师，据说这部影片将在人民剧院首映。\n\n不出所料，好奇的观众挤满了电影院，在他们身后，有一台巨大的投影仪和一位国民军军官。当灯光熄灭，军官开始操作投影仪后，观众们屏住了呼吸。一个巨大的白色圆圈在墙上逐渐显现，一个站立者的轮廓出现在圆圈中。当画面变得清晰后，人们认出那个赤膊的男人是冯玉祥，他正在士兵面前表演剑舞。随后，画面切换到冯玉祥微笑着为士兵颁发勋章，并与军官们坐着讨论军事计划的场景。\n\n虽然这部电影是无声的，但冯玉祥在影片中展现出的普通行为，尤其是像士兵一样舞剑，这让观众意识到，在成为著名的基督将军和国民军领袖之前，和在场的大多数观众一样，冯玉祥也只不过是一个小人物和普通士兵罢了。"
+ shx.feng.10.a:0 "冯玉祥，一个被打仗耽误的电影明星！"
+ shx.feng.11.t:0 "新思想问答"
+ shx.feng.11.d:0 "冯玉祥及其国民军意识到他们争取民心的努力已经取得了期待已久的突破，他们动用着每一层关系，推动着每一次宣传——任何能在公关中扫清钉子户的因素。[SHX.Capital.GetCapitalVictoryPointName]的煽动者们在课堂，在学界，在非法集会上变得愈发大胆，这些都在削弱阎锡山的执政根基。他们最强大的武器可能是参照其运动理念修订的问答书：\n\n第3部分：公平\n第12问：当我们老百姓终日做牛做马仍家徒四壁时，那些不识五谷之人却尽享奢华。你来说说，这公平吗？\n答：这不公平。\n第13问：若那些游手好闲、奢靡终日之人挥霍无度、恣意铺张，你来说说，这公平吗？\n答：这不公平。\n第14问：既然这样，你应该怎么做呢？\n答：我们要提倡公平。\n第15问：那要怎么提倡公平呢？\n答：我们要让每个人衣食无忧，住用不虑。\n第16问：那该从何处开始行动呢？\n答：第一步，我们不能骚扰平民，还要保护平民免受骚扰。第二步，我们要保障人民的土地和就业。\n第17问：还有什么要做的吗？\n答：要让劳有所得，还要处理游手好闲之人！\n\n其他部分包括一份孙中山遗嘱的副本，五原誓师词和有关牺牲、责任和反帝的问题。这样的宣传在平民、知识分子甚至乡绅中广为流传，极大地增强了冯玉祥在省内的影响力。"
+ shx.feng.11.a:0 "而我们会坚持正义！"
 
  shx.edu.0.t:0 "教育改革接近完成"
  shx.edu.0.d.yan:0 "尽管存在种种困难和反对声音，山西最终仍然成功完成了一切必要的技术突破，奠定了其十年计划的基础。他们的山西大学，山西国民师范学院以及各种技术学校（之前已经是腐败至极，烂到根子上了）现在也经过努力摆脱了从前的腐朽，一套崭新的，更强大的学校系统展现在了人们面前。无能又摆烂的教授被取代或是被改造，随之而来的是国外学者，国内技工和完美的学术氛围。学生则被一个棒槌一个甜枣地规训了起来。大学校园，虽然还是一个学生休闲的地方，但黑恶恶性事件数量已经显著减少。缺乏使用而长期关闭的校园图书馆已经重新开放，新一代学生们正在朝气蓬勃地为新山西与新中国之崛起而读书。教授和学者们的研究工作得到资助，他们很快就可以与北京乃至世界的科学家并肩而立。\n\n当然，山西仍然存在许多问题，主要是高等教育内部仍然存在着阶层间的不平等。虽然来自较低阶层的学生能获得奖学金，但绝大部分学生仍然来自较上层的阶级。但话说回来，没有人能否认山西相较于世纪初的境况来看已经好了太多，好日子还在后头呢！"
