--- a/localisation/HNN_superevents_l_simp_chinese.yml
+++ b/localisation/HNN_superevents_l_simp_chinese.yml
@@ -75,14 +75,14 @@
 
  associated_governorate: "合作省"
  autonomous_governorate: "自治省"
- governorate: "系属省"
+ kr_governorate: "系属省"
  integrated_governorate: "整合省"
  COUNTRY_associated_governorate: "$NONIDEOLOGY$"
  COUNTRY_associated_governorate_DEF: "$NONIDEOLOGYDEF$"
  COUNTRY_autonomous_governorate: "$NONIDEOLOGY$"
  COUNTRY_autonomous_governorate_DEF: "$NONIDEOLOGYDEF$"
- COUNTRY_governorate: "$NONIDEOLOGY$"
- COUNTRY_governorate_DEF: "$NONIDEOLOGYDEF$"
+ COUNTRY_kr_governorate: "$NONIDEOLOGY$"
+ COUNTRY_kr_governorate_DEF: "$NONIDEOLOGYDEF$"
  COUNTRY_integrated_governorate: "$NONIDEOLOGY$"
  COUNTRY_integrated_governorate_DEF: "$NONIDEOLOGYDEF$"
  cannot_change_autonomy_manually: "§R无法手动改变自治等级§!"
